# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

group("arkui_cangjie_wrapper_package") {
  deps = [
    "ohos:ohos",
    "ohos/arkui:ohos.arkui",
    "ohos/arkui/component:ohos.arkui.component",
    "ohos/arkui/component_utils:ohos.arkui.component_utils",
    "ohos/arkui/shape:ohos.arkui.shape",
    "ohos/arkui/state_management:ohos.arkui.state_management",
    "ohos/arkui/ui_context:ohos.arkui.ui_context",
    "ohos/base:ohos.base",
    "ohos/curves:ohos.curves",
  ]
}

arkui_cangjie_wrapper_packages_ohos = [
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/refresh:ohos.arkui.component.refresh",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/toggle:ohos.arkui.component.toggle",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/text_area:ohos.arkui.component.text_area",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/util:ohos.arkui.component.util",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/sidebar:ohos.arkui.component.sidebar",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/path:ohos.arkui.component.path",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/qrcode:ohos.arkui.component.qrcode",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/ellipse:ohos.arkui.component.ellipse",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component_utils:ohos.arkui.component_utils",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/text_timer:ohos.arkui.component.text_timer",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/ui_context/prompt_action:ohos.arkui.ui_context.prompt_action",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/text_field:ohos.arkui.component.text_field",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/text_input:ohos.arkui.component.text_input",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/circle:ohos.arkui.component.circle",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/ui_context/font:ohos.arkui.ui_context.font",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/image:ohos.arkui.component.image",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/checkbox_group:ohos.arkui.component.checkbox_group",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/search:ohos.arkui.component.search",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/stepper:ohos.arkui.component.stepper",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/slider:ohos.arkui.component.slider",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/data_panel:ohos.arkui.component.data_panel",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/list_item_group:ohos.arkui.component.list_item_group",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/recycle:ohos.arkui.component.recycle",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/state_management:ohos.arkui.state_management",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/stepper_item:ohos.arkui.component.stepper_item",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/custom_dialog:ohos.arkui.component.custom_dialog",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/custom_component:ohos.arkui.component.custom_component",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/web:ohos.arkui.component.web",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/common:ohos.arkui.component.common",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/radio:ohos.arkui.component.radio",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/grid_item:ohos.arkui.component.grid_item",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos:ohos",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/text_picker:ohos.arkui.component.text_picker",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/ui_context:ohos.arkui.ui_context",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/path_2d:ohos.arkui.component.path_2d",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/checkbox:ohos.arkui.component.checkbox",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/scroll:ohos.arkui.component.scroll",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/menu:ohos.arkui.component.menu",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/shape:ohos.arkui.shape",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/native_struct:ohos.arkui.component.native_struct",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/list_item:ohos.arkui.component.list_item",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/button:ohos.arkui.component.button",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/custom_view:ohos.arkui.component.custom_view",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/image_span:ohos.arkui.component.image_span",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/lazy_for_each:ohos.arkui.component.lazy_for_each",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/select:ohos.arkui.component.select",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/ui_context/measure:ohos.arkui.ui_context.measure",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/base:ohos.base",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/rich_editor:ohos.arkui.component.rich_editor",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/line:ohos.arkui.component.line",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/rating:ohos.arkui.component.rating",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/ui_context/router:ohos.arkui.ui_context.router",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/column:ohos.arkui.component.column",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/rect:ohos.arkui.component.rect",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/gauge:ohos.arkui.component.gauge",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/grid:ohos.arkui.component.grid",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/ui_context/animator:ohos.arkui.ui_context.animator",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/ifcomponent:ohos.arkui.component.ifcomponent",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/stack:ohos.arkui.component.stack",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/navigation:ohos.arkui.component.navigation",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/for_each:ohos.arkui.component.for_each",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/span:ohos.arkui.component.span",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/row_split:ohos.arkui.component.row_split",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/video:ohos.arkui.component.video",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/grid_row:ohos.arkui.component.grid_row",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/relative_container:ohos.arkui.component.relative_container",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/rich_text:ohos.arkui.component.rich_text",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/curves:ohos.curves",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/grid_col:ohos.arkui.component.grid_col",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/tab:ohos.arkui.component.tab",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/menu_item:ohos.arkui.component.menu_item",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/flex:ohos.arkui.component.flex",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/scroll_bar:ohos.arkui.component.scroll_bar",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/focus_control:ohos.arkui.component.focus_control",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/list:ohos.arkui.component.list",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/canvas:ohos.arkui.component.canvas",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/text:ohos.arkui.component.text",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/counter:ohos.arkui.component.counter",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/text_clock:ohos.arkui.component.text_clock",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/shape:ohos.arkui.component.shape",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/progress:ohos.arkui.component.progress",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/empty_component:ohos.arkui.component.empty_component",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component:ohos.arkui.component",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/menu_item_group:ohos.arkui.component.menu_item_group",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui:ohos.arkui",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/alphabet_indexer:ohos.arkui.component.alphabet_indexer",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/row:ohos.arkui.component.row",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/divider:ohos.arkui.component.divider",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/loading_progress:ohos.arkui.component.loading_progress",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/alert_dialog:ohos.arkui.component.alert_dialog",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/badge:ohos.arkui.component.badge",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/pattern_lock:ohos.arkui.component.pattern_lock",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/swiper:ohos.arkui.component.swiper",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/action_sheet:ohos.arkui.component.action_sheet",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/date_picker:ohos.arkui.component.date_picker",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/page_transition:ohos.arkui.component.page_transition",
  "//foundation/arkui/arkui_cangjie_wrapper/ohos/arkui/component/blank:ohos.arkui.component.blank",
]
arkui_cangjie_wrapper_packages_kit =
    [ "//foundation/arkui/arkui_cangjie_wrapper/kit/ArkUI:kit.ArkUI" ]

copy_ohos_cangjie_sdk_api_lib("copy_sdk_arkui_cangjie_libs") {
  ohos_inputs = arkui_cangjie_wrapper_packages_ohos
  kit_inputs = arkui_cangjie_wrapper_packages_kit
}
