# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("kit.ArkUI") {
  sources = [ "index.cj" ]

  cj_deps = [
    "../../ohos/animator:ohos.animator",
    "../../ohos/arkui/component:ohos.arkui.component",
    "../../ohos/arkui/component_snapshot:ohos.arkui.component_snapshot",
    "../../ohos/arkui/component_utils:ohos.arkui.component_utils",
    "../../ohos/arkui/observer:ohos.arkui.observer",
    "../../ohos/arkui/state_management:ohos.arkui.state_management",
    "../../ohos/base:ohos.base",
    "../../ohos/ui_resource:ohos.ui_resource",
    "../../ohos/curves:ohos.curves",
    "../../ohos/font:ohos.font",
    "../../ohos/matrix4:ohos.matrix4",
    "../../ohos/measure:ohos.measure",
    "../../ohos/prompt_action:ohos.prompt_action",
    "../../ohos/router:ohos.router",
  ]

  kit = true
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_api"
  lib_name = "ArkUI"
}
