# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("kit.ArkUI") {
  sources = [ "index.cj" ]

  cj_deps = [
    "../../ohos:ohos.animator",
    "../../ohos:ohos.component",
    "../../ohos:ohos.component_snapshot",
    "../../ohos:ohos.component_utils",
    "../../ohos:ohos.observer",
    "../../ohos:ohos.state_manage",
    "../../ohos:ohos.base",
    "../../ohos:ohos.ui_resource",
    "../../ohos:ohos.curves",
    "../../ohos:ohos.font",
    "../../ohos:ohos.matrix4",
    "../../ohos:ohos.measure",
    "../../ohos:ohos.prompt_action",
    "../../ohos:ohos.router",
  ]

  cj_external_deps = [
    "window_cangjie_wrapper:ohos.window",
    "window_cangjie_wrapper:ohos.display",
  ]

  kit = true
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_wrapper"
  lib_name = "ArkUI"
}
