# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.base") {
  sources = [
    "async_error.cj",
    "business_exception.cj",
    "callback_invoke.cj",
    "cj_concurrency.cj",
    "collection.cj",
    "color.cj",
    "common_types.cj",
    "cstring_extend.cj",
    "length.cj",
    "main_context.cj",
    "resource.cj",
    "callback_type.cj",
  ]

  cj_external_deps = [
    "cangjie_api:ohos.encoding.json",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
    "hiviewdfx_cangjie_api:ohos.hilog",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]

  subsystem_name = "arkui"
  part_name = "arkui_cangjie_api"
  lib_name = "base"
}
