# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.arkui.component") {
  sources = [
    "component.cj",
  ]

  cj_deps = [
    "text_input:ohos.arkui.component.text_input",
    "relative_container:ohos.arkui.component.relative_container",
    "shape:ohos.arkui.component.shape",
    "nav_destination:ohos.arkui.component.nav_destination",
    "stepper_item:ohos.arkui.component.stepper_item",
    "panel:ohos.arkui.component.panel",
    "offscreen_canvas_rendering_context_2d:ohos.arkui.component.offscreen_canvas_rendering_context_2d",
    "text_area:ohos.arkui.component.text_area",
    "gesture:ohos.arkui.component.gesture",
    "pattern_lock:ohos.arkui.component.pattern_lock",
    "action_sheet:ohos.arkui.component.action_sheet",
    "shared_trasition:ohos.arkui.component.shared_trasition",
    "grid_col:ohos.arkui.component.grid_col",
    "text:ohos.arkui.component.text",
    "refresh:ohos.arkui.component.refresh",
    "ellipse:ohos.arkui.component.ellipse",
    "row_split:ohos.arkui.component.row_split",
    "button:ohos.arkui.component.button",
    "checkbox_group:ohos.arkui.component.checkbox_group",
    "list_item:ohos.arkui.component.list_item",
    "stack:ohos.arkui.component.stack",
    "column_split:ohos.arkui.component.column_split",
    "date_picker:ohos.arkui.component.date_picker",
    "rating:ohos.arkui.component.rating",
    "marquee:ohos.arkui.component.marquee",
    "alphabet_indexer:ohos.arkui.component.alphabet_indexer",
    "polygon:ohos.arkui.component.polygon",
    "menu_item:ohos.arkui.component.menu_item",
    "recycle:ohos.arkui.component.recycle",
    "menu:ohos.arkui.component.menu",
    "grid_row:ohos.arkui.component.grid_row",
    "path:ohos.arkui.component.path",
    "blank:ohos.arkui.component.blank",
    "symbol_span:ohos.arkui.component.symbol_span",
    "water_flow:ohos.arkui.component.water_flow",
    "text_timer:ohos.arkui.component.text_timer",
    "progress:ohos.arkui.component.progress",
    "web:ohos.arkui.component.web",
    "radio:ohos.arkui.component.radio",
    "checkbox:ohos.arkui.component.checkbox",
    "location_button:ohos.arkui.component.location_button",
    "text_clock:ohos.arkui.component.text_clock",
    "custom_view:ohos.arkui.component.custom_view",
    "sidebar:ohos.arkui.component.sidebar",
    "animate:ohos.arkui.component.animate",
    "security_component:ohos.arkui.component.security_component",
    "counter:ohos.arkui.component.counter",
    "data_panel:ohos.arkui.component.data_panel",
    "context_menu:ohos.arkui.component.context_menu",
    "circle:ohos.arkui.component.circle",
    "image:ohos.arkui.component.image",
    "video:ohos.arkui.component.video",
    "symbol_glyph:ohos.arkui.component.symbol_glyph",
    "slider:ohos.arkui.component.slider",
    "time_picker:ohos.arkui.component.time_picker",
    "for_each:ohos.arkui.component.for_each",
    "span:ohos.arkui.component.span",
    "custom_dialog:ohos.arkui.component.custom_dialog",
    "scroll:ohos.arkui.component.scroll",
    "row:ohos.arkui.component.row",
    "path_2d:ohos.arkui.component.path_2d",
    "swiper:ohos.arkui.component.swiper",
    "grid_item:ohos.arkui.component.grid_item",
    "menu_item_group:ohos.arkui.component.menu_item_group",
    "flex:ohos.arkui.component.flex",
    "gauge:ohos.arkui.component.gauge",
    "rect:ohos.arkui.component.rect",
    "text_field:ohos.arkui.component.text_field",
    "util:ohos.arkui.component.util",
    "divider:ohos.arkui.component.divider",
    "rich_editor:ohos.arkui.component.rich_editor",
    "grid:ohos.arkui.component.grid",
    "line:ohos.arkui.component.line",
    "page_transition:ohos.arkui.component.page_transition",
    "fake_component:ohos.arkui.component.fake_component",
    "calendar_picker:ohos.arkui.component.calendar_picker",
    "select:ohos.arkui.component.select",
    "focus_control:ohos.arkui.component.focus_control",
    "image_span:ohos.arkui.component.image_span",
    "lazy_for_each:ohos.arkui.component.lazy_for_each",
    "text_picker:ohos.arkui.component.text_picker",
    "common:ohos.arkui.component.common",
    "qrcode:ohos.arkui.component.qrcode",
    "alert_dialog:ohos.arkui.component.alert_dialog",
    "canvas:ohos.arkui.component.canvas",
    "scroll_bar:ohos.arkui.component.scroll_bar",
    "offscreen_canvas:ohos.arkui.component.offscreen_canvas",
    "navigation:ohos.arkui.component.navigation",
    "stepper:ohos.arkui.component.stepper",
    "tab:ohos.arkui.component.tab",
    "column:ohos.arkui.component.column",
    "view:ohos.arkui.component.view",
    "loading_progress:ohos.arkui.component.loading_progress",
    "badge:ohos.arkui.component.badge",
    "hyperlink:ohos.arkui.component.hyperlink",
    "rich_text:ohos.arkui.component.rich_text",
    "paste_button:ohos.arkui.component.paste_button",
    "list:ohos.arkui.component.list",
    "progress_mask:ohos.arkui.component.progress_mask",
    "cursor_control:ohos.arkui.component.cursor_control",
    "toggle:ohos.arkui.component.toggle",
    "list_item_group:ohos.arkui.component.list_item_group",
    "polyline:ohos.arkui.component.polyline",
    "image_animator:ohos.arkui.component.image_animator",
    "save_button:ohos.arkui.component.save_button",
    "search:ohos.arkui.component.search",
    "ifcomponent:ohos.arkui.component.ifcomponent",
  ]

  external_deps = [ "ace_engine:cj_frontend_ohos" ]
  subsystem_name = "arkui"
  part_name = "arkui_cangjie_api"
  lib_name = "arkui.component"
}
